--- a/pom.xml
+++ b/pom.xml
@@ -160,8 +160,9 @@
 	  <plugin>
   <groupId>org.sonarsource.scanner.maven</groupId>
   <artifactId>sonar-maven-plugin</artifactId>
-  <version>3.9.1.2184</version>
+  <version>4.0.0.4121</version> <!-- or latest -->
 </plugin>
+
 
 
 
