--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 
 	</properties>
 
+	<properties>
+  <maven.compiler.source>11</maven.compiler.source>
+  <maven.compiler.target>11</maven.compiler.target>
+</properties>
+
 	<dependencies>
 		
 		<dependency>
